windowZ HISTORY

 1.3-beta2
 =========

  * moved z2-Interface to z3-interface
    [tom_gross]

  * fixed `window_view` to work with Plone 4.0
    [tom_gross]

 1.3-beta
 ========

  * Eggified product

 1.2.1 - 2008-06-03
 ==================

  * Added Danish translations.
    [jacobv]

 1.2 - 2007-08-21
 ================

  * Added show_window template to show external sites inside portal just
    providing the site URL as a value for the url variable.
    [ferri]

  * Added tests from default ArchGenXML support.
    [ferri]

  * Moved document_byline macro at view template.
    [ferri]

  * Plone 3.0 compatibility.
    [ferri]

  * Regenerated with the last ArchGenXML from 1.5 branch.
    [ferri]

  * Added French translations.
    [landure]

  * Included stripogram as an embeded library in windowZ. Now it's not a
    dependencie anymore.
    [ferri]

 1.1 - 2006-09-12
 ================

  * Provided migration script to migrate objects and configurations from
    CMFDisplayPage to windowZ.
    [ferri]

  * Updated all translations.
    [ferri]

  * Added proxy support for content catalogation when Zope instances are running
    behind a proxy server.
    [ferri]

  * Added Italian translations.
    [befree]

  * Removing workflow for portal_windowZ tool.
    [ferri]

  * Fixed bug in Install.py when trying to remove portal_windowZ from
    idsNotToList property.
    [ferri]

  * Removing portal_windowZ tool from portal search with the types_not_searched
    property.
    [ferri]

  * Added AppInstall.py which add Window to default_page_types property. It
    enables users to select a Window as the default page of a folder.
    [ferri]

  * Implemented feature directly in ArchGenXML to automatically uncatalog
    portal_windowZ tool.
    [ferri]

  * Generalized path for generation scripts and i18ndude.
    [ferri]

  * Added the link address inside iFrame because some browsers doesn't have
    iFrame support.
    [ferri]

 1.0.1 - 2006-08-09
 ==================
