@@ -9,6 +9,10 @@ windowZ HISTORY
   * fixed `window_view` to work with Plone 4.0
     [tom_gross]
 
+  * added inherit_protocol flag, which allows to inherit the protocol schema
+    from the URL of the content
+    [tom_gross]
+  
  1.3-beta
  ========
 
